--- a/Combine per Area.ipynb
+++ b/Combine per Area.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_json = glob(\"T**.json\")"
+    "metadata_json = [glob(\"T**.json\")[5]]"
    ]
   },
   {
@@ -95,23 +95,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/13 [00:56<?, ?it/s]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "combine_all_class_to_area() missing 1 required positional argument: 'undefined'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/media/nmhlog/BackUp Windows/Thesis/GOINGTOTHESIS/Combine per Area.ipynb Cell 7'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/Thesis/GOINGTOTHESIS/Combine%20per%20Area.ipynb#ch0000006?line=30'>31</a>\u001b[0m         ground\u001b[39m=\u001b[39mbuff_data\n\u001b[1;32m     <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/Thesis/GOINGTOTHESIS/Combine%20per%20Area.ipynb#ch0000006?line=31'>32</a>\u001b[0m     \u001b[39m# if class_ == \"undefined\":\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/Thesis/GOINGTOTHESIS/Combine%20per%20Area.ipynb#ch0000006?line=32'>33</a>\u001b[0m     \u001b[39m#     # continue\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/Thesis/GOINGTOTHESIS/Combine%20per%20Area.ipynb#ch0000006?line=33'>34</a>\u001b[0m     \u001b[39m#     inst_ids_keys = list(metadata[class_].keys())\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/Thesis/GOINGTOTHESIS/Combine%20per%20Area.ipynb#ch0000006?line=39'>40</a>\u001b[0m     \u001b[39m#         pass\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/Thesis/GOINGTOTHESIS/Combine%20per%20Area.ipynb#ch0000006?line=40'>41</a>\u001b[0m     \u001b[39m#     undefined=buff_data\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/Thesis/GOINGTOTHESIS/Combine%20per%20Area.ipynb#ch0000006?line=41'>42</a>\u001b[0m xyz,rgb,class_id,ins_id\u001b[39m=\u001b[39m combine_all_class_to_area(building,vegetation,ground)\n\u001b[1;32m     <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/Thesis/GOINGTOTHESIS/Combine%20per%20Area.ipynb#ch0000006?line=42'>43</a>\u001b[0m test_all \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mappend(xyz,rgb, axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/Thesis/GOINGTOTHESIS/Combine%20per%20Area.ipynb#ch0000006?line=43'>44</a>\u001b[0m np\u001b[39m.\u001b[39msavetxt(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00marea[:\u001b[39m-\u001b[39m\u001b[39m5\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m.txt\u001b[39m\u001b[39m\"\u001b[39m,test_all,fmt\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m%1.9f\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m%1.9f\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m%1.9f\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: combine_all_class_to_area() missing 1 required positional argument: 'undefined'"
+      "100%|██████████| 1/1 [08:42<00:00, 522.70s/it]\n"
      ]
     }
    ],
    "source": [
-    "for area in tqdm(metadata_json):\n",
+    "for area in tqdm([\"T_316000_233500_NE_T_316000_233500_SW.json\"]):\n",
     "    metadata = read_meta_data(area)\n",
     "    for class_ in metadata.keys():\n",
     "        # print(class_)\n",
@@ -162,6 +151,199 @@
     "    f.create_dataset('ins_id', data=ins_id)\n",
     "    f.close()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check_key = read_meta_data(\"meta_data.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = []\n",
+    "for i in  check_key.keys() :\n",
+    "    if \"building\" in i:\n",
+    "        data.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [d.split(\"_\")[1] for d in data]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "194"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(np.unique(np.array(data,dtype=\"int\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = glob(\"Test/T_316000_233500_NE_T_316000_233500_SW/building**.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "tuple index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/media/nmhlog/BackUp Windows/GOINGTOTHESIS/Combine per Area.ipynb Cell 13'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/GOINGTOTHESIS/Combine%20per%20Area.ipynb#ch0000016?line=0'>1</a>\u001b[0m np\u001b[39m.\u001b[39mloadtxt(i)\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]\n",
+      "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "np.loadtxt(i).shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3119919, 6)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "buff.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "buff = np.loadtxt(data[0])[:,:6]\n",
+    "for i in data[1:]:\n",
+    "    try:\n",
+    "        buff_data = np.loadtxt(i)[:,:6]\n",
+    "        buff = np.append(buff,buff_data,axis=0)\n",
+    "    except:\n",
+    "        test_buff = np.zeros((buff.shape[0]+1,6))\n",
+    "        buff_data = np.loadtxt(i)[:6]\n",
+    "        test_buff[:buff.shape[0]] = buff\n",
+    "        test_buff[-1] = buff_data\n",
+    "        buff=test_buff.copy()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savetxt(\"test.txt\",buff,fmt=\"%1.9f %1.9f %1.9f %d %d %d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/media/nmhlog/BackUp Windows/GOINGTOTHESIS\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glob(\"text**\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_buff[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
