--- a/meta_dataekstraction.ipynb
+++ b/meta_dataekstraction.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,12 +40,19 @@
     "def read_meta_data (path):\n",
     "    with open(path, 'r') as j:\n",
     "        contents = json.loads(j.read())\n",
-    "        return contents"
+    "        return contents\n",
+    "        \n",
+    "def del_data(files_name,folder_name=\"Dataset\"):\n",
+    "    try:\n",
+    "        for d in files_name:\n",
+    "            os.remove(f\"{folder_name}/{d}\")\n",
+    "    except:\n",
+    "        os.remove(f\"{folder_name}/{files_name}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13/13 [00:00<00:00, 15.03it/s]\n"
+      "100%|██████████| 13/13 [00:00<00:00, 14.86it/s]\n"
      ]
     }
    ],
@@ -130,127 +137,8 @@
     "        \"ground\":ground,\n",
     "        \"undefined\":undefined\n",
     "        }\n",
-    "    save_meta_data(f\"map_ins_{Area}\",dict_area)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "map_data = read_meta_data(\"map_ins_T_315500_234500_NW.json\")\n",
-    "meta_data= read_meta_data(\"Dataset/T_315500_234500_NW/meta_data.json\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['vegetation_bush_01',\n",
-       " 'vegetation_bush_02',\n",
-       " 'vegetation_bush_03',\n",
-       " 'vegetation_bush_04',\n",
-       " 'vegetation_bush_05',\n",
-       " 'vegetation_bush_06',\n",
-       " 'vegetation_bush_07',\n",
-       " 'vegetation_bush_08',\n",
-       " 'vegetation_bush_09',\n",
-       " 'vegetation_bush_10',\n",
-       " 'vegetation_bush_11',\n",
-       " 'vegetation_bush_12',\n",
-       " 'vegetation_bush_13',\n",
-       " 'vegetation_bush_14',\n",
-       " 'vegetation_bush_15',\n",
-       " 'vegetation_tree_01',\n",
-       " 'vegetation_tree_02',\n",
-       " 'vegetation_tree_03',\n",
-       " 'vegetation_tree_04',\n",
-       " 'vegetation_tree_05',\n",
-       " 'vegetation_tree_06',\n",
-       " 'vegetation_tree_07',\n",
-       " 'vegetation_tree_08',\n",
-       " 'vegetation_tree_09',\n",
-       " 'vegetation_tree_10',\n",
-       " 'vegetation_tree_11',\n",
-       " 'vegetation_tree_12',\n",
-       " 'vegetation_tree_13',\n",
-       " 'vegetation_tree_14',\n",
-       " 'vegetation_tree_15',\n",
-       " 'vegetation_tree_16',\n",
-       " 'vegetation_tree_17',\n",
-       " 'vegetation_tree_18',\n",
-       " 'vegetation_tree_19',\n",
-       " 'vegetation_tree_20',\n",
-       " 'vegetation_tree_21',\n",
-       " 'vegetation_tree_22',\n",
-       " 'vegetation_tree_23',\n",
-       " 'vegetation_tree_24',\n",
-       " 'vegetation_tree_25',\n",
-       " 'vegetation_tree_26',\n",
-       " 'vegetation_tree_27',\n",
-       " 'vegetation_tree_28',\n",
-       " 'vegetation_tree_29',\n",
-       " 'vegetation_tree_30',\n",
-       " 'vegetation_tree_31',\n",
-       " 'vegetation_tree_32',\n",
-       " 'vegetation_tree_33',\n",
-       " 'vegetation_tree_34',\n",
-       " 'vegetation_tree_35',\n",
-       " 'vegetation_tree_36',\n",
-       " 'vegetation_tree_37',\n",
-       " 'vegetation_tree_38',\n",
-       " 'vegetation_tree_39',\n",
-       " 'vegetation_tree_40',\n",
-       " 'vegetation_tree_41',\n",
-       " 'vegetation_tree_42',\n",
-       " 'vegetation_tree_43',\n",
-       " 'vegetation_tree_44',\n",
-       " 'vegetation_tree_45',\n",
-       " 'vegetation_tree_46',\n",
-       " 'vegetation_tree_47',\n",
-       " 'vegetation_tree_48',\n",
-       " 'vegetation_tree_49',\n",
-       " 'vegetation_tree_50',\n",
-       " 'vegetation_tree_51',\n",
-       " 'vegetation_tree_52',\n",
-       " 'vegetation_tree_53',\n",
-       " 'vegetation_tree_54',\n",
-       " 'vegetation_tree_55',\n",
-       " 'vegetation_tree_56',\n",
-       " 'vegetation_tree_57',\n",
-       " 'vegetation_tree_58',\n",
-       " 'vegetation_tree_59',\n",
-       " 'vegetation_tree_60',\n",
-       " 'vegetation_tree_61',\n",
-       " 'vegetation_tree_62',\n",
-       " 'vegetation_tree_63',\n",
-       " 'vegetation_tree_64',\n",
-       " 'vegetation_tree_65',\n",
-       " 'vegetation_tree_66',\n",
-       " 'vegetation_tree_67',\n",
-       " 'vegetation_tree_68']"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "map_data[\"vegetation\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    save_meta_data(f\"map_ins_{Area}\",dict_area)\n",
+    "\n",
     "def maping_meta_data(class_name,map_data,meta_data):\n",
     "    inst_id = {}\n",
     "    try:\n",
@@ -302,15 +190,8 @@
     "            inst_id_ground = maping_meta_data(\"ground\",map_data,meta_data)\n",
     "        else :\n",
     "            inst_id_undefined = maping_meta_data(\"undefined\",map_data,meta_data)\n",
-    "    return [inst_id_building,inst_id_vegetation,inst_id_ground,inst_id_undefined]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return [inst_id_building,inst_id_vegetation,inst_id_ground,inst_id_undefined]\n",
+    "\n",
     "for i,_ in enumerate(METADATA):\n",
     "    area=METADATA[i].split(\"/\")[1]\n",
     "    ins = map_to_inst(f\"map_ins_{area}.json\",METADATA[i])\n",
@@ -319,21 +200,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13/13 [37:03<00:00, 171.02s/it]\n"
+      " 92%|█████████▏| 12/13 [42:24<03:32, 212.08s/it] \n"
      ]
     }
    ],
    "source": [
     "MAPTOINST_META_LIST= glob.glob(\"map_**\")\n",
-    "def get_combining_building_data(map_data_json = MAPTOINST_META_LIST) :   \n",
-    "    for i in tqdm.tqdm(range(len(map_data_json))):\n",
+    "def get_combining_building_data(map_data_json = MAPTOINST_META_LIST,buff_folder=\"Dataset\") :   \n",
+    "    for i,meta_name in tqdm.tqdm(enumerate(map_data_json),total=13):\n",
     "        map_data = read_meta_data(map_data_json[i])[\"building\"]\n",
     "        buff_folder = f\"all_data_building/{map_data_json[i][8:-5]}\"\n",
     "        os.makedirs(buff_folder,exist_ok=True)\n",
@@ -342,50 +223,93 @@
     "            list_data_txt = map_data[mdi][\"path\"]\n",
     "            # Start from init = 0 and append until last\n",
     "            all_data = np.loadtxt(f\"Dataset/{list_data_txt[0]}\")[:,:6]\n",
-    "            try:\n",
-    "                for idx in range(1,len(list_data_txt)):\n",
+    "            for idx in range(1,len(list_data_txt)):\n",
+    "                try:\n",
     "                    buff = np.loadtxt(f\"Dataset/{list_data_txt[idx]}\")[:,:6]\n",
     "                    all_data = np.append(all_data,buff,axis=0)\n",
-    "            except :\n",
-    "                pass\n",
+    "                except :\n",
+    "                    buff = np.loadtxt(f\"Dataset/{list_data_txt[idx]}\")[:6]\n",
+    "                    all_data = np.append(all_data,[buff],axis=0)\n",
+    "            del_data(list_data_txt)\n",
+    "            if \"T_316000_233500_NE_T_316000_233500_SW\" in meta_name:\n",
+    "                data_building_index = np.where(all_data[:,0]<318000)\n",
+    "                data_bulding_sub_building_index = np.where(all_data[:,0]>318000)\n",
+    "                data_building = all_data[data_building_index]\n",
+    "                data_bulding_sub_building = all_data[data_bulding_sub_building_index]\n",
+    "                data_bulding_sub_building[:,0] = data_bulding_sub_building[:,0]-2000\n",
+    "                data_bulding_sub_building[:,1] = data_bulding_sub_building[:,1]-3619\n",
+    "                data_bulding_sub_building[:,2] = data_bulding_sub_building[:,2]+40\n",
+    "                all_data = np.append(data_building,data_bulding_sub_building,axis=0)\n",
     "            save_npy_loc = f\"{buff_folder}/building_{mdi}.npy\"\n",
-    "            map_data[mdi][\"path_all_data\"] = save_npy_loc\n",
-    "            np.save(f\"{buff_folder}/building_{mdi}.npy\",all_data,allow_pickle=True)\n",
+    "            map_data[mdi][\"path\"] = save_npy_loc\n",
+    "            np.save(save_npy_loc,all_data,allow_pickle=True)\n",
     "        old_map = read_meta_data(map_data_json[i])\n",
     "        old_map[\"building\"]= map_data\n",
     "        save_meta_data(f\"{map_data_json[i][8:-5]}\",old_map)\n",
+    "        os.remove(f\"{map_data_json[i]}\")\n",
     "get_combining_building_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/13 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'map_ins_T_316000_234000_SW.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/media/nmhlog/BackUp Windows/GOINGTOTHESIS/meta_dataekstraction.ipynb Cell 7'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/GOINGTOTHESIS/meta_dataekstraction.ipynb#ch0000008?line=0'>1</a>\u001b[0m get_combining_building_data(map_data_json\u001b[39m=\u001b[39m[\u001b[39m\"\u001b[39m\u001b[39mmap_ins_T_316000_234000_SW.json\u001b[39m\u001b[39m\"\u001b[39m])\n",
+      "\u001b[1;32m/media/nmhlog/BackUp Windows/GOINGTOTHESIS/meta_dataekstraction.ipynb Cell 6'\u001b[0m in \u001b[0;36mget_combining_building_data\u001b[0;34m(map_data_json, buff_folder)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/GOINGTOTHESIS/meta_dataekstraction.ipynb#ch0000006?line=1'>2</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_combining_building_data\u001b[39m(map_data_json \u001b[39m=\u001b[39m MAPTOINST_META_LIST,buff_folder\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mall_data_building\u001b[39m\u001b[39m\"\u001b[39m) :   \n\u001b[1;32m      <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/GOINGTOTHESIS/meta_dataekstraction.ipynb#ch0000006?line=2'>3</a>\u001b[0m     \u001b[39mfor\u001b[39;00m i,meta_name \u001b[39min\u001b[39;00m tqdm\u001b[39m.\u001b[39mtqdm(\u001b[39menumerate\u001b[39m(map_data_json),total\u001b[39m=\u001b[39m\u001b[39m13\u001b[39m):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/GOINGTOTHESIS/meta_dataekstraction.ipynb#ch0000006?line=3'>4</a>\u001b[0m         map_data \u001b[39m=\u001b[39m read_meta_data(map_data_json[i])[\u001b[39m\"\u001b[39m\u001b[39mbuilding\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/GOINGTOTHESIS/meta_dataekstraction.ipynb#ch0000006?line=4'>5</a>\u001b[0m         buff_folder \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mall_data_building/\u001b[39m\u001b[39m{\u001b[39;00mmap_data_json[i][\u001b[39m8\u001b[39m:\u001b[39m-\u001b[39m\u001b[39m5\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/GOINGTOTHESIS/meta_dataekstraction.ipynb#ch0000006?line=5'>6</a>\u001b[0m         os\u001b[39m.\u001b[39mmakedirs(buff_folder,exist_ok\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "\u001b[1;32m/media/nmhlog/BackUp Windows/GOINGTOTHESIS/meta_dataekstraction.ipynb Cell 3'\u001b[0m in \u001b[0;36mread_meta_data\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/GOINGTOTHESIS/meta_dataekstraction.ipynb#ch0000002?line=4'>5</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mread_meta_data\u001b[39m (path):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/GOINGTOTHESIS/meta_dataekstraction.ipynb#ch0000002?line=5'>6</a>\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(path, \u001b[39m'\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m j:\n\u001b[1;32m      <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/GOINGTOTHESIS/meta_dataekstraction.ipynb#ch0000002?line=6'>7</a>\u001b[0m         contents \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mloads(j\u001b[39m.\u001b[39mread())\n\u001b[1;32m      <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/GOINGTOTHESIS/meta_dataekstraction.ipynb#ch0000002?line=7'>8</a>\u001b[0m         \u001b[39mreturn\u001b[39;00m contents\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'map_ins_T_316000_234000_SW.json'"
+     ]
+    }
+   ],
    "source": [
-    "map_build    = glob.glob(\"T_**\")"
+    "get_combining_building_data(map_data_json=[\"map_ins_T_316000_234000_SW.json\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['map_ins_T_316000_233500_NE_T_316000_233500_SW.json',\n",
+       " 'map_ins_T_316000_233500_NW.json',\n",
+       " 'map_ins_T_316000_233500_SE.json',\n",
+       " 'map_ins_T_316000_234000_NE.json',\n",
+       " 'map_ins_T_316000_234000_NW.json',\n",
+       " 'map_ins_T_316000_234000_SE.json',\n",
+       " 'map_ins_T_316000_234000_SW.json',\n",
+       " 'map_ins_T_316500_234000_SW_T_316500_233500_NW.json',\n",
+       " 'map_ins_T_315500_234500_SE.json',\n",
+       " 'map_ins_T_315500_233500_NE_T_315500_234000_SE.json',\n",
+       " 'map_ins_T_315500_234500_NE.json',\n",
+       " 'map_ins_T_315500_234500_NW.json']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# for id_ in range(len(map_build)):\n",
-    "#     building_metadata = read_meta_data(map_build[id_])[\"building\"]\n",
-    "#     map_ins = read_meta_data(f\"map_ins_{map_build[id_]}\")\n",
-    "#     map_ins.pop(\"building\")\n",
-    "#     map_ins[\"building\"]=building_metadata\n",
-    "#     save_meta_data(map_build[id_][:-5],map_ins)"
+    "MAPTOINST_META_LIST"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
