finish gabungkan data

--- a/Combine per Area.ipynb
+++ b/Combine per Area.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "id_class = {'building':0, 'vegetation':1, 'ground':2}"
+    "id_class = {'building':0, 'vegetation':1, 'ground':2,'undefined':3}"
    ]
   },
   {
@@ -28,12 +28,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_json = [glob(\"T**.json\")[5]]"
+    "metadata_json = glob(\"T**.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,13 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_xyz_rgb_class_ins_id(class_,inst_ids_keys,index,metadata,path,new_data=None):\n",
     "    if class_ == \"building\":\n",
-    "        xyz_rgb = np.load(metadata[class_][inst_ids_keys[index]][path],allow_pickle=True)\n",
+    "        xyz_rgb = np.loadtxt(metadata[class_][inst_ids_keys[index]][path])\n",
     "    else: \n",
     "        xyz_rgb = np.loadtxt(f\"Dataset/{metadata[class_][inst_ids_keys[index]][path]}\")\n",
     "    vec_size = xyz_rgb.shape[0]\n",
@@ -63,26 +63,7 @@
     "    class_id.fill(int(id_class[class_]))\n",
     "    if new_data:\n",
     "        return append_xyz_rgb_class_ins_id(new_data,[xyz_rgb[:,:3],xyz_rgb[:,3:6].astype(\"int\"),class_id,ins_id])\n",
-    "    return [xyz_rgb[:,:3],xyz_rgb[:,3:6].astype(\"int\"),class_id,ins_id]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def data_combine_all_class_to_area(building,vegetation,ground,axis=0):\n",
-    "    buff = np.append(building,vegetation,axis=axis)\n",
-    "    buff = np.append(buff,ground,axis=axis)\n",
-    "    # buff = np.append(buff,undefined,axis=axis)\n",
-    "    return buff\n",
-    "def combine_all_class_to_area(building,vegetation,ground):\n",
-    "    return [data_combine_all_class_to_area(building[0],vegetation[0],ground[0],axis=0),\n",
-    "        data_combine_all_class_to_area(building[1],vegetation[1],ground[1],axis=0),\n",
-    "        data_combine_all_class_to_area(building[2],vegetation[2],ground[2],axis=None),\n",
-    "        data_combine_all_class_to_area(building[3],vegetation[3],ground[3],axis=None)]\n",
+    "    return [xyz_rgb[:,:3],xyz_rgb[:,3:6].astype(\"int\"),class_id.reshape(ins_id.shape[0],1),ins_id.reshape(ins_id.shape[0],1)]\n",
     "\n"
    ]
   },
@@ -90,26 +71,48 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combine_all_class_to_area(building,vegetation,ground,undefined):\n",
+    "    return [np.vstack((building[0],vegetation[0],ground[0],undefined[0])),\\\n",
+    "    np.vstack((building[1],vegetation[1],ground[1],undefined[1])),\\\n",
+    "    np.vstack((\n",
+    "        np.array(building[2]).reshape(len(building[2]),1),\n",
+    "        np.array(vegetation[2]).reshape(len(vegetation[2]),1),\n",
+    "        np.array(ground[2]).reshape(len(ground[2]),1),\n",
+    "        np.array(undefined[2]).reshape(len(undefined[2]),1))),\n",
+    "    np.vstack((\n",
+    "        np.array(building[3]).reshape(len(building[3]),1),\n",
+    "        np.array(vegetation[3]).reshape(len(vegetation[3]),1),\n",
+    "        np.array(ground[3]).reshape(len(ground[3]),1),\n",
+    "        np.array(undefined[3]).reshape(len(undefined[3]),1)\n",
+    "        ))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [08:42<00:00, 522.70s/it]\n"
+      "  0%|          | 0/13 [00:00<?, ?it/s]"
      ]
     }
    ],
    "source": [
-    "for area in tqdm([\"T_316000_233500_NE_T_316000_233500_SW.json\"]):\n",
+    "for area in tqdm(metadata_json):\n",
     "    metadata = read_meta_data(area)\n",
     "    for class_ in metadata.keys():\n",
     "        # print(class_)\n",
     "        if class_ == \"building\" :\n",
     "            # continue\n",
     "            inst_ids_keys = list(metadata[class_].keys())\n",
-    "            buff_data =  read_xyz_rgb_class_ins_id(class_=\"building\",path=\"path_all_data\",inst_ids_keys=inst_ids_keys,index=0,metadata=metadata)\n",
+    "            buff_data =  read_xyz_rgb_class_ins_id(class_=\"building\",path=\"path\",inst_ids_keys=inst_ids_keys,index=0,metadata=metadata)\n",
     "            for idx in range(1,len(inst_ids_keys)):\n",
-    "                buff_data = read_xyz_rgb_class_ins_id(class_=\"building\",path=\"path_all_data\",inst_ids_keys=inst_ids_keys,index=idx,metadata=metadata,new_data=buff_data)\n",
+    "                buff_data = read_xyz_rgb_class_ins_id(class_=\"building\",path=\"path\",inst_ids_keys=inst_ids_keys,index=idx,metadata=metadata,new_data=buff_data)\n",
     "            building=buff_data\n",
     "        if class_ == \"vegetation\" :\n",
     "            # continue\n",
@@ -131,19 +134,19 @@
     "            except:\n",
     "                pass\n",
     "            ground=buff_data\n",
-    "        # if class_ == \"undefined\":\n",
-    "        #     # continue\n",
-    "        #     inst_ids_keys = list(metadata[class_].keys())\n",
-    "        #     buff_data =  read_xyz_rgb_class_ins_id(class_=\"undefined\",path=\"path\",inst_ids_keys=inst_ids_keys,index=0,metadata=metadata)\n",
-    "        #     try:\n",
-    "        #         for idx in range(1,len(inst_ids_keys)):\n",
-    "        #             buff_data = read_xyz_rgb_class_ins_id(class_=\"undefined\",path=\"path\",inst_ids_keys=inst_ids_keys,index=idx,metadata=metadata,new_data=buff_data)\n",
-    "        #     except:\n",
-    "        #         pass\n",
-    "        #     undefined=buff_data\n",
-    "    xyz,rgb,class_id,ins_id= combine_all_class_to_area(building,vegetation,ground)\n",
-    "    test_all = np.append(xyz,rgb, axis=1)\n",
-    "    np.savetxt(f\"{area[:-5]}.txt\",test_all,fmt=\"%1.9f %1.9f %1.9f %d %d %d\")\n",
+    "        if class_ == \"undefined\":\n",
+    "            # continue\n",
+    "            inst_ids_keys = list(metadata[class_].keys())\n",
+    "            buff_data =  read_xyz_rgb_class_ins_id(class_=\"undefined\",path=\"path\",inst_ids_keys=inst_ids_keys,index=0,metadata=metadata)\n",
+    "            try:\n",
+    "                for idx in range(1,len(inst_ids_keys)):\n",
+    "                    buff_data = read_xyz_rgb_class_ins_id(class_=\"undefined\",path=\"path\",inst_ids_keys=inst_ids_keys,index=idx,metadata=metadata,new_data=buff_data)\n",
+    "            except:\n",
+    "                pass\n",
+    "            undefined=buff_data\n",
+    "    xyz,rgb,class_id,ins_id= combine_all_class_to_area(building,vegetation,ground,undefined)\n",
+    "    buff = np.hstack((xyz,rgb,class_id.reshape((class_id.shape[0], 1)),ins_id.reshape((class_id.shape[0], 1))))\n",
+    "    np.savetxt(f\"{area[:-5]}.txt\",buff,fmt=\"%1.9f %1.9f %1.9f %d %d %d %d %d\")\n",
     "    f = h5py.File(f\"{area[:-5]}.h5\", 'w')\n",
     "    f.create_dataset('xyz', data=xyz)\n",
     "    f.create_dataset('colour', data=rgb)\n",
@@ -151,199 +154,6 @@
     "    f.create_dataset('ins_id', data=ins_id)\n",
     "    f.close()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "check_key = read_meta_data(\"meta_data.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = []\n",
-    "for i in  check_key.keys() :\n",
-    "    if \"building\" in i:\n",
-    "        data.append(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = [d.split(\"_\")[1] for d in data]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "194"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(np.unique(np.array(data,dtype=\"int\")))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = glob(\"Test/T_316000_233500_NE_T_316000_233500_SW/building**.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "tuple index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/media/nmhlog/BackUp Windows/GOINGTOTHESIS/Combine per Area.ipynb Cell 13'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/media/nmhlog/BackUp%20Windows/GOINGTOTHESIS/Combine%20per%20Area.ipynb#ch0000016?line=0'>1</a>\u001b[0m np\u001b[39m.\u001b[39mloadtxt(i)\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]\n",
-      "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
-     ]
-    }
-   ],
-   "source": [
-    "np.loadtxt(i).shape[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3119919, 6)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "buff.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "buff = np.loadtxt(data[0])[:,:6]\n",
-    "for i in data[1:]:\n",
-    "    try:\n",
-    "        buff_data = np.loadtxt(i)[:,:6]\n",
-    "        buff = np.append(buff,buff_data,axis=0)\n",
-    "    except:\n",
-    "        test_buff = np.zeros((buff.shape[0]+1,6))\n",
-    "        buff_data = np.loadtxt(i)[:6]\n",
-    "        test_buff[:buff.shape[0]] = buff\n",
-    "        test_buff[-1] = buff_data\n",
-    "        buff=test_buff.copy()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.savetxt(\"test.txt\",buff,fmt=\"%1.9f %1.9f %1.9f %d %d %d\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/media/nmhlog/BackUp Windows/GOINGTOTHESIS\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "glob(\"text**\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0., 0., 0., 0., 0.])"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_buff[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
